Swap to using composer based dependencies

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,6 @@
 	],
 	"require":
 	{
-		"silverstripe/framework": "3.1.x-dev",
-                "silverstripe/cms": "3.1.x-dev"
+		"publero/net_gearman": "1.0.*@dev"
 	}
 }
